--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,7 @@ bind-key l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'omerxx/catppuccin-tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
